# mc-autojoin

./: CMakeLists.txt  LICENSE  README.md  autojoin.c
